add a form for a name input and add a test to add the name to any wont you be my neighbor

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <form id="formOne">
       <label for="number">Please Input a Number:</label>
       <input type="text" id="number" required>
+      <label for="name">Enter your name:</label>
+      <input type="text" id="name" required>
       <button type="submit" class="btn-dark"></button>
     </form>
   </div>
