add further styling and fix typos in HTML and in UI logic

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <br>
       <button type="submit" class="btn-dark">Submit</button>
     </form>
+    <div class="resultBox">
+      <p id="output"></p>
+    </div>
   </div>
   
 </body>
