--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <br>
       <input type="text" id="name" required>
       <br>
-      <button type="submit" class="btn-dark">Submit</button>
+      <button type="submit" class="btn-dark" onclick="getFields()">Submit</button>
     </form>
     <div class="resultBox">
       <p id="output"></p>
